# sw200_robot

./: README.md
sw200_bringup/: CMakeLists.txt  package.xml
sw200_bringup/config/: motors.yaml
sw200_bringup/launch/: bringup.launch
sw200_bringup/launch/include/: diagnostic.launch  driver.launch  imu.launch  lidar.launch
sw200_control/: CMakeLists.txt  package.xml
sw200_control/config/: control.yaml  localization.yaml  teleop.yaml  twist_mux.yaml
sw200_control/launch/: control.launch  teleop.launch
sw200_description/: CMakeLists.txt  package.xml
sw200_description/config/: diffdrive_controller.yaml
sw200_description/launch/: sw200_debug_urdf.launch  upload_sw200_urdf.launch
sw200_description/meshes/visual/: robot_2.STL  wheel1.STL
sw200_description/urdf/: sw200.urdf.xacro
sw200_description/urdf/include/: _d435.urdf.xacro  imu.gazebo.urdf.xacro  sick_551.urdf.xacro  sw200.gazebo.xacro  sw200.transmission.xacro  sw200_v1.urdf.xacro  urm04_sensor.xacro
sw200_gazebo/: CMakeLists.txt  package.xml
sw200_gazebo/launch/: sw200_empty_world.launch  sw200_gazebo_common.launch  sw200_maze_world.launch
sw200_gazebo/launch/includes/: ekf.launch.xml  spawn_maze.launch.xml
sw200_navigation/: CMakeLists.txt  package.xml
sw200_navigation/launch/: amcl.launch  hector_mapping.launch  move_base.xml  start_maps.launch  start_planner.launch
